--- a/login.html
+++ b/login.html
@@ -7,9 +7,7 @@
     initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Alef" rel="stylesheet">
     <link rel="stylesheet" href="includes/style.css">
-    <script src="includes/db.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="includes/scripts.js"></script>
   </head>
   <body>
     <div id="wrapper_login">
@@ -18,7 +16,7 @@
           <a href="index.html" id="logo"></a>
         </header>
         <main>
-          <form action="home.php" method="post">
+          <form method="get">
             <article>
               <span id="bad_login">
                 Your Username/Password combination was incorrect
@@ -35,5 +33,6 @@
       <footer>
       </footer>
     </div>
+    <script src="includes/scripts.js"></script>
 </body>
 </html>
