--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Alef" rel="stylesheet">
     <link rel="stylesheet" href="includes/style.css">
-    <script src="includes/db.json"></script>
     <!-- <script src="includes/scripts.js"></script> -->
   </head>
   <body>
@@ -19,7 +18,7 @@
       <main>
             <a href="#">Registration</a>
             <span>Already a user?</span>
-            <a href="login.html">Login</a>
+            <a href="login.php">Login</a>
         </section>
       </main>
       <footer>
