--- a/home.html
+++ b/home.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <title>Wise Library</title>
-
-    <script src="includes/db.json"></script>
-    <script src="includes/scripts.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Alef" rel="stylesheet">
     <link rel="stylesheet" href="includes/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="includes/scripts.js"></script>
   </head>
   <body>
     <div id="wrapper">
         <header>
+           <a href="index.html" id="logo"></a>
            <a href="index.html" id="logo"></a>
            <nav>
              <ul>
@@ -31,5 +33,7 @@
     </main>
     <footer>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="includes/scripts.js"></script>
   </body>
 </html>
